--- a/index.html
+++ b/index.html
@@ -4,9 +4,102 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>janina</title>
+    <title>INFLUENCER-GEARS</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>thethe</h1>
+    <nav>
+
+    </nav>
+    <main>
+        <section id="sec1">
+            <div id="sec1firstdiv">
+                <h1>Start your Journey as Influencer</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime suscipit consectetur dolorem libero. Amet quasi veniam quia ducimus possimus. Voluptates itaque nisi consectetur eveniet reprehenderit cum aliquam iusto veniam asperiores!</p>
+                <a target="_blank" href="https://youtube.com">Preebook now arrow</a>
+            </div>
+            <div id="sec1secdiv">
+                <img src="images/main-camera.png">
+            </div>
+        </section>
+        <section id="sec2">
+            <div>
+                <img src="images/tripod.png" alt="">
+                <h1>bangladesh</h1>
+                <p>$100.00</p>
+                <p>Wordwide shifting available
+                Buyers protection possible!</p>
+            </div>
+            <div>
+                <img src="images/mic.png" alt="">
+                <h1>bangladesh</h1>
+                <p>$100.00</p>
+                <p>Wordwide shifting available
+                Buyers protection possible!</p>
+            </div>
+            <div>
+                <img src="images/airpod.png" alt="">
+                <h1>bangladesh</h1>
+                <p>$100.00</p>
+                <p>Wordwide shifting available
+                Buyers protection possible!</p>
+            </div>
+            <div>
+                <img src="images/drone.png" alt="">
+                <h1>bangladesh</h1>
+                <p>$100.00</p>
+                <p>Wordwide shifting available
+                Buyers protection possible!</p>
+            </div>
+            <div>
+                <img src="images/lights.png" alt="">
+                <h1>bangladesh</h1>
+                <p>$100.00</p>
+                <p>Wordwide shifting available
+                Buyers protection possible!</p>
+            </div>
+            <div>
+                <img src="images/setup.png" alt="">
+                <h1>bangladesh</h1>
+                <p>$100.00</p>
+                <p>Wordwide shifting available
+                Buyers protection possible!</p>
+            </div>
+            <div>
+                <img src="images/camera.png" alt="">
+                <h1>bangladesh</h1>
+                <p>$100.00</p>
+                <p>Wordwide shifting available
+                Buyers protection possible!</p>
+            </div>
+            <div>
+                <img src="images/single-light.png" alt="">
+                <h1>bangladesh</h1>
+                <p>$100.00</p>
+                <p>Wordwide shifting available
+                Buyers protection possible!</p>
+            </div>
+            <div>
+                <img src="images/action.png" alt="">
+                <h1>bangladesh</h1>
+                <p>$100.00</p>
+                <p>Wordwide shifting available
+                Buyers protection possible!</p>
+            </div>
+        </section>
+        <section id="sec3">
+            <div>
+                <img src="images/gear.png">
+            </div>
+            <div>
+                <h1>Featured products at one place</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt possimus temporibus maiores aut, deserunt, officiis impedit illum, minima excepturi itaque voluptate ipsam molestiae non commodi! Quam culpa asperiores doloremque beatae.</p>
+                <a target="_blank" href="https://www.youtube.com">Join now arrow</a>
+            </div>
+        </section>
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
