--- a/index.html
+++ b/index.html
@@ -15,13 +15,23 @@
         <section id="sec1">
             <div id="sec1firstdiv">
                 <h1>Start your Journey as Influencer</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime suscipit consectetur dolorem libero. Amet quasi veniam quia ducimus possimus. Voluptates itaque nisi consectetur eveniet reprehenderit cum aliquam iusto veniam asperiores!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime suscipit consectetur dolorem libero. Amet quasi veniam quia ducimus possimus.</p><br>
                 <a target="_blank" href="https://youtube.com">Preebook now arrow</a>
             </div>
             <div id="sec1secdiv">
                 <img src="images/main-camera.png">
             </div>
         </section>
+        <section id="logosec">
+            <img src="logos/Alibaba.svg" alt="">
+            <img src="logos/Amazon.svg" alt="">
+            <img src="logos/Daraz.pk Logo.svg" alt="">
+            <img src="logos/Ebay.svg" alt="">
+            <img src="logos/Rakuten.svg" alt="">
+            <img src="logos/Walmart.svg" alt="">
+            <img src="logos/Target.svg" alt="">
+        </section>
+        <h1 id="sec2heading">Popular Collection</h1>
         <section id="sec2">
             <div>
                 <img src="images/tripod.png" alt="">
