--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>INFLUENCER-GEARS</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/a207c7f4ec.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <nav>
@@ -36,64 +37,109 @@
             <div>
                 <img src="images/tripod.png" alt="">
                 <h1>bangladesh</h1>
-                <p>$100.00</p>
-                <p>Wordwide shifting available
+                <p class="price">$100.00</p>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i><p class="rating">4.99</p>
+                <p class="description">Wordwide shifting<br>available<br>
                 Buyers protection possible!</p>
             </div>
             <div>
                 <img src="images/mic.png" alt="">
                 <h1>bangladesh</h1>
-                <p>$100.00</p>
-                <p>Wordwide shifting available
+                <p class="price">$100.00</p>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i><p class="rating">4.99</p>
+                <p class="description">Wordwide shifting<br>available<br>
                 Buyers protection possible!</p>
             </div>
             <div>
                 <img src="images/airpod.png" alt="">
                 <h1>bangladesh</h1>
-                <p>$100.00</p>
-                <p>Wordwide shifting available
+                <p class="price">$100.00</p>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i><p class="rating">4.99</p>
+                <p class="description">Wordwide shifting<br>available<br>
                 Buyers protection possible!</p>
             </div>
             <div>
                 <img src="images/drone.png" alt="">
                 <h1>bangladesh</h1>
-                <p>$100.00</p>
-                <p>Wordwide shifting available
+                <p class="price">$100.00</p>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i><p class="rating">4.99</p>
+                <p class="description">Wordwide shifting<br>available<br>
                 Buyers protection possible!</p>
             </div>
             <div>
                 <img src="images/lights.png" alt="">
                 <h1>bangladesh</h1>
-                <p>$100.00</p>
-                <p>Wordwide shifting available
+                <p class="price">$100.00</p>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i><p class="rating">4.99</p>
+                <p class="description">Wordwide shifting<br>available<br>
                 Buyers protection possible!</p>
             </div>
             <div>
                 <img src="images/setup.png" alt="">
                 <h1>bangladesh</h1>
-                <p>$100.00</p>
-                <p>Wordwide shifting available
+                <p class="price">$100.00</p>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i><p class="rating">4.99</p>
+                <p class="description">Wordwide shifting<br>available<br>
                 Buyers protection possible!</p>
             </div>
             <div>
                 <img src="images/camera.png" alt="">
                 <h1>bangladesh</h1>
-                <p>$100.00</p>
-                <p>Wordwide shifting available
+                <p class="price">$100.00</p>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i><p class="rating">4.99</p>
+                <p class="description">Wordwide shifting<br>available<br>
                 Buyers protection possible!</p>
             </div>
             <div>
                 <img src="images/single-light.png" alt="">
                 <h1>bangladesh</h1>
-                <p>$100.00</p>
-                <p>Wordwide shifting available
+                <p class="price">$100.00</p>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i><p class="rating">4.99</p>
+                <p class="description">Wordwide shifting<br>available<br>
                 Buyers protection possible!</p>
             </div>
             <div>
                 <img src="images/action.png" alt="">
                 <h1>bangladesh</h1>
-                <p>$100.00</p>
-                <p>Wordwide shifting available
+                <p class="price">$100.00</p>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star"></i>
+                <i class="fas fa-star-half-alt"></i><p class="rating">4.99</p>
+                <p class="description">Wordwide shifting<br>available<br>
                 Buyers protection possible!</p>
             </div>
         </section>
