--- a/index.html
+++ b/index.html
@@ -143,19 +143,26 @@
                 Buyers protection possible!</p>
             </div>
         </section>
+        <p id="seemore">See More arrow</p>
         <section id="sec3">
-            <div>
-                <img src="images/gear.png">
-            </div>
-            <div>
+            <!-- <div>
+            </div> -->
+            <img src="images/gear.png">
+            <div class="sec3secdiv">
                 <h1>Featured products at one place</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt possimus temporibus maiores aut, deserunt, officiis impedit illum, minima excepturi itaque voluptate ipsam molestiae non commodi! Quam culpa asperiores doloremque beatae.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt possimus temporibus maiores aut, deserunt, officiis impedit illum, minima excepturi itaque voluptate.</p>
                 <a target="_blank" href="https://www.youtube.com">Join now arrow</a>
             </div>
         </section>
     </main>
     <footer>
-
+        <h1>Influencer products</h1>
+        <p>Copyright © 2020  influencer products</p>
+        <p>All rights reserved</p>
+        <i class="fab fa-instagram-square"></i>
+        <i class="fas fa-globe"></i>
+        <i class="fab fa-twitter-square"></i>
+        <i class="fab fa-youtube-square"></i>
     </footer>
 </body>
 </html>
