--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div id="sec1firstdiv">
                 <h1>Start your Journey as Influencer</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime suscipit consectetur dolorem libero. Amet quasi veniam quia ducimus possimus.</p><br>
-                <a target="_blank" href="https://youtube.com">Preebook now arrow</a>
+                <a target="_blank" href="https://youtube.com">Preebook now <i class="fas fa-arrow-right"></i></a>
             </div>
             <div id="sec1secdiv">
                 <img src="images/main-camera.png">
@@ -143,7 +143,7 @@
                 Buyers protection possible!</p>
             </div>
         </section>
-        <p id="seemore">See More arrow</p>
+        <p id="seemore">See More <span><i class="fas fa-long-arrow-alt-right"></i></span></p>
         <section id="sec3">
             <!-- <div>
             </div> -->
@@ -151,7 +151,7 @@
             <div class="sec3secdiv">
                 <h1>Featured products at one place</h1>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt possimus temporibus maiores aut, deserunt, officiis impedit illum, minima excepturi itaque voluptate.</p>
-                <a target="_blank" href="https://www.youtube.com">Join now arrow</a>
+                <a target="_blank" href="https://www.youtube.com">Join now <i class="fas fa-arrow-right"></i></a>
             </div>
         </section>
     </main>
