--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <script src="https://kit.fontawesome.com/a207c7f4ec.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav>
-
-    </nav>
+    <header>
+        <h1>Influencer products</h1>
+    </header>
     <main>
         <section id="sec1">
             <div id="sec1firstdiv">
                 <h1>Start your Journey as Influencer</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime suscipit consectetur dolorem libero. Amet quasi veniam quia ducimus possimus.</p><br>
+                <p>Influencer and social media educator, Christina Galbato, shares her top tips to become an Instagram influencer and how to succeed on the platform.</p><br>
                 <a target="_blank" href="https://youtube.com">Preebook now <i class="fas fa-arrow-right"></i></a>
             </div>
             <div id="sec1secdiv">
@@ -143,14 +143,12 @@
                 Buyers protection possible!</p>
             </div>
         </section>
-        <p id="seemore">See More <span><i class="fas fa-long-arrow-alt-right"></i></span></p>
+        <a id="seemore" target="_blank" href="https://www.youtube.com">See More<i class="fas fa-long-arrow-alt-right"></i></a>
         <section id="sec3">
-            <!-- <div>
-            </div> -->
             <img src="images/gear.png">
             <div class="sec3secdiv">
                 <h1>Featured products at one place</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt possimus temporibus maiores aut, deserunt, officiis impedit illum, minima excepturi itaque voluptate.</p>
+                <p>Your homepage is the most visited place in your store. It’s the page where your customers start looking at the storefront. You might want to excite your customers.</p>
                 <a target="_blank" href="https://www.youtube.com">Join now <i class="fas fa-arrow-right"></i></a>
             </div>
         </section>
