--- a/index.html
+++ b/index.html
@@ -145,12 +145,21 @@
         </section>
         <a id="seemore" target="_blank" href="https://www.youtube.com">See More<i class="fas fa-long-arrow-alt-right"></i></a>
         <section id="sec3">
-            <img src="images/gear.png">
-            <div class="sec3secdiv">
-                <h1>Featured products at one place</h1>
-                <p>Your homepage is the most visited place in your store. It’s the page where your customers start looking at the storefront. You might want to excite your customers.</p>
-                <a target="_blank" href="https://www.youtube.com">Join now <i class="fas fa-arrow-right"></i></a>
+            <div>
+                <img src="images/gear.png">
+                <div class="sec3secdiv">
+                    <h1>Featured products at one place</h1>
+                    <p>Your homepage is the most visited place in your store. It's the page where your customers start looking at the storefront. You might want to excite your customers.</p>
+                </div>
             </div>
+            <div>
+                <img src="images/gear.png">
+                <div class="sec3secdiv">
+                    <h1>Featured products at one place</h1>
+                    <p>Your homepage is the most visited place in your store. It's the page where your customers start looking at the storefront. You might want to excite your customers.</p>
+                </div>
+            </div><br>
+            <a class="maina" target="_blank" href="https://www.youtube.com">Join now <i class="fas fa-arrow-right"></i></a>
         </section>
     </main>
     <footer>
